--- a/demos/menu/index.html
+++ b/demos/menu/index.html
@@ -9,6 +9,7 @@
 
 <ul>
 	<li><a href="default.html">Default functionality</a></li>
+	<li><a href="rounded-corners.html">Rounded corners</a></li>
 	<li><a href="icons.html">Icons</a></li>
 	<li><a href="categories.html">Categories</a></li>
 </ul>
