--- a/demos/selectmenu/index.html
+++ b/demos/selectmenu/index.html
@@ -9,6 +9,7 @@
 
 <ul>
 	<li><a href="default.html">Default functionality</a></li>
+	<li><a href="square-corners.html">Square corners</a></li>
 	<li><a href="custom_render.html">Custom item rendering functionality</a></li>
 	<li><a href="product-selection.html">Product Selection</a></li>
 </ul>
