--- a/demos/slider/index.html
+++ b/demos/slider/index.html
@@ -9,6 +9,7 @@
 
 <ul>
 	<li><a href="default.html">Default functionality</a></li>
+	<li><a href="square-corners.html">Square corners</a></li>
 	<li><a href="steps.html">Snap to increments</a></li>
 	<li><a href="range.html">Range slider</a></li>
 	<li><a href="rangemin.html">Range with fixed minimum</a></li>
