--- a/demos/spinner/index.html
+++ b/demos/spinner/index.html
@@ -9,6 +9,7 @@
 
 <ul>
 	<li><a href="default.html">Default functionality</a></li>
+	<li><a href="square-corners.html">Square corners</a></li>
 	<li><a href="decimal.html">Decimal</a></li>
 	<li><a href="currency.html">Currency</a></li>
 	<li><a href="latlong.html">Map</a></li>
