--- a/demos/tabs/index.html
+++ b/demos/tabs/index.html
@@ -9,6 +9,7 @@
 
 <ul>
 	<li><a href="default.html">Default functionality</a></li>
+	<li><a href="square-corners.html">Square corners</a></li>
 	<li><a href="ajax.html">Content via Ajax</a></li>
 	<li><a href="mouseover.html">Open on mouseover</a></li>
 	<li><a href="collapsible.html">Collapse content</a></li>
