--- a/demos/tooltip/index.html
+++ b/demos/tooltip/index.html
@@ -9,6 +9,7 @@
 
 <ul>
 	<li><a href="default.html">Default functionality</a></li>
+	<li><a href="square-corners.html">Square corners</a></li>
 	<li><a href="custom-style.html">Custom style with arrow</a></li>
 	<li><a href="forms.html">Forms with tooltips</a></li>
 	<li><a href="tracking.html">Track the mouse</a></li>
